# SDiZO2

./: .gitignore  CMakeLists.txt  Menu.hpp  README.md  main.cpp
RUNS/: SDiZO_2  dijkstraincidentmatrix.csv  dijkstraneighbourhoodlist.csv  kruskalincidentmatrix.csv  kruskalneighbourhoodlist.csv  primincidentmatrix.csv  primneighbourhoodlist.csv
algorithms/BellmanFord/: BellmanFordAlgorithm.cpp  BellmanFordAlgorithm.hpp
algorithms/Dijkstra/: DijkstraAlgorithm.cpp  DijkstraAlgorithm.hpp
algorithms/Kruskal/: KruskalAlgorithm.cpp  KruskalAlgorithm.hpp
algorithms/Prim/: PrimAlgorithm.cpp  PrimAlgorithm.hpp
structures/incidentMatrix/: IncidentMatrix.cpp  IncidentMatrix.hpp
structures/neighborhoodList/: NeighbourhoodList.cpp  NeighbourhoodList.hpp
tests/: GraphBenchmark.cpp  GraphBenchmark.hpp
utilities/: Array.cpp  Array.hpp  Edge.hpp  EdgeHeap.cpp  EdgeHeap.hpp  Enums.hpp  GraphData.hpp  GraphGenerator.cpp  GraphGenerator.hpp  Path.cpp  Path.hpp  PathEdge.hpp  RandomGenerator.cpp  RandomGenerator.hpp  ReaderFromFile.cpp  ReaderFromFile.hpp  Timer.hpp
